[metadata]
name = pyghmi
summary = Python General Hardware Management Initiative (IPMI and others)
description-file =
    README
author = Jarrod Johnson
author-email = jjohnson2@lenovo.com
home-page = http://github.com/openstack/pyghmi/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    pyghmi

[global]
setup-hooks =
    pbr.hooks.setup_hook
