[metadata]
name = pyghmi
summary = Python General Hardware Management Initiative (IPMI and others)
description-file =
    README
author = Jarrod Johnson
author-email = jjohnson2@lenovo.com
home-page = http://github.com/openstack/pyghmi/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    pyghmi

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    pyghmicons = pyghmi.cmd.pyghmicons:main
    pyghmiutil = pyghmi.cmd.pyghmiutil:main
    virshbmc = pyghmi.cmd.virshbmc:main
    fakebmc = pyghmi.cmd.fakebmc:main
